--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ac2772e2.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react-github-list/assets/favicon.ac2772e2.svg" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github List</title>
-    <script type="module" crossorigin src="/assets/index.6244f203.js"></script>
-    <link rel="stylesheet" href="/assets/index.7cf607a1.css">
+    <script type="module" crossorigin src="/react-github-list/assets/index.6244f203.js"></script>
+    <link rel="stylesheet" href="/react-github-list/assets/index.7cf607a1.css">
   </head>
   <body>
     <div id="root"></div>
